Add board service and gamectrl

--- a/app/index.jade
+++ b/app/index.jade
@@ -6,4 +6,8 @@ html(lang="en")
 	body
 		div.nav-bar.centered
 			<h1>Tic Tac Toe</h1>
+	script(src="/bower_components/underscore/underscore.js")
 	script(src="/bower_components/angular/angular.js")
+	script(src="/scripts/app.js")
+	script(src="/scripts/services/board.js")
+	script(src="/scripts/controllers/game.js")
