--- a/app/index.jade
+++ b/app/index.jade
@@ -8,7 +8,15 @@ html(lang="en")
 			<h1>Tic Tac Toe</h1>
 		div.container(ng-controller='GameCtrl')
 			div.eight.columns.offset-by-four
-				board(src='board')
+				table.board
+					tr(ng-repeat='y in []|range:board.length')
+						td(
+							ng-repeat='x in []|range:board.length',
+							ng-click='play(currentPlayer, x, y)',
+							ng-style='{ width: {{ 100 / board.length }} + "%", height: {{ 100 / board.length }} + "%" }'
+						) {{ board.get(x,y) }}
+
+
 	script(src="/bower_components/underscore/underscore.js")
 	script(src="/bower_components/angular/angular.js")
 	script(src="/scripts/app.js")
