--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -59,11 +59,30 @@ table.board {
 	width: 400px;
 	height: 400px;
 	margin: 0 auto;
+	margin-bottom: 30px;
 
 	td {
 		vertical-align: middle;
 		text-align: center;
 		font-size: 48px;
 		border: 1px solid #888;
+
+		&.highlighted {
+			background-color: green;
+		}
+	}
+}
+
+@media only screen and (max-width: 767px) {
+	table.board {
+		height: 300px;
+		width: 300px;
+	}
+}
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+	table.board {
+		height: 420px;
+		width: 420px;
 	}
 }
