Add to readme and tweak header styles

--- a/app/index.jade
+++ b/app/index.jade
@@ -6,7 +6,7 @@ html(lang="en")
 		meta(name='viewport', content='user-scalable=no, width=device-width, initial-scale=1.0')
 	body(ng-app='tictactoe')
 		div.nav-bar.centered
-			<h1>Tic Tac Toe</h1>
+			h2 Tic-Tac-Toe
 		div.container(ng-controller='GameCtrl')
 			div.eight.columns.offset-by-four
 				table.board
