--- a/app/index.jade
+++ b/app/index.jade
@@ -12,11 +12,13 @@ html(lang="en")
 				table.board
 					tr(ng-repeat='y in [] | range:game.board.length')
 						td(
-							ng-repeat='x in [] | range:game.board.length',
-							ng-click='play(game, x, y)',
-							ng-class='{ highlighted: game.highlight[y][x] }'
-							ng-style='{ width: {{ 100 / game.board.length }} + "%", height: {{ 100 / game.board.length }} + "%" }'
+							| ng-repeat='x in [] | range:game.board.length',
+							| ng-click='play(game, x, y)',
+							| ng-class='{ highlighted: game.highlight[y][x] }',
+							| ng-style='{ width: {{ 100 / game.board.length }} + "%", height: {{ 100 / game.board.length }} + "%" }'
 						) {{ game.board.get(x,y) }}
+				h3.centered(ng-show='!game.isOver')
+					| [{{ game.currentPlayer }}] Player {{ playerName(game.currentPlayer) }}'s turn
 				div.game-over-msg.centered(ng-show='game.isOver')
 					h3(ng-show='game.winner')
 						| Winner: Player {{ playerName(game.winner) }}
