--- a/app/index.jade
+++ b/app/index.jade
@@ -7,18 +7,25 @@ html(lang="en")
 	body(ng-app='tictactoe')
 		div.nav-bar.centered
 			h2 Tic-Tac-Toe
+
+		// 16 col grid
 		div.container(ng-controller='GameCtrl')
 			div.eight.columns.offset-by-four
+				// create the board
 				table.board
+					// create an array [0, 1 ... (game.board.length - 1)] for each row
 					tr(ng-repeat='y in [] | range:game.board.length')
-						td(
-							| ng-repeat='x in [] | range:game.board.length',
-							| ng-click='play(game, x, y)',
-							| ng-class='{ highlighted: game.highlight[y][x] }',
-							| ng-style='{ width: {{ 100 / game.board.length }} + "%", height: {{ 100 / game.board.length }} + "%" }'
+						// create <td> for each square in row
+						td( ng-repeat='x in [] | range:game.board.length',
+							// play at the x, y coord
+							ng-click='play(game, x, y)',
+							ng-class='{ highlighted: game.highlight[y][x] }',
+							ng-style='{ width: {{ 100 / game.board.length }} + "%", height: {{ 100 / game.board.length }} + "%" }'
 						) {{ game.board.get(x,y) }}
+				// show the current player if the game isn't in over state
 				h3.centered(ng-show='!game.isOver')
 					| [{{ game.currentPlayer }}] Player {{ playerName(game.currentPlayer) }}'s turn
+				// show the winner or draw message if the game is over
 				div.game-over-msg.centered(ng-show='game.isOver')
 					h3(ng-show='game.winner')
 						| Winner: Player {{ playerName(game.winner) }}
@@ -26,11 +33,13 @@ html(lang="en")
 						| Draw!
 					button(ng-click='restart(game)') New Game
 
-	script(src="/bower_components/underscore/underscore.js")
-	script(src="/bower_components/angular/angular.js")
-	script(src="/scripts/app.js")
-	script(src="/scripts/filters/range.js")
-	script(src="/scripts/services/board.js")
-	script(src="/scripts/services/winChecker.js")
-	script(src="/scripts/services/makeGrid.js")
-	script(src="/scripts/controllers/game.js")
+		script(src="/bower_components/underscore/underscore.js")
+		script(src="/bower_components/angular/angular.js")
+		script(src="/scripts/app.js")
+		script(src="/scripts/filters/range.js")
+		script(src="/scripts/services/board.js")
+		script(src="/scripts/services/winChecker.js")
+		script(src="/scripts/services/makeGrid.js")
+		script(src="/scripts/controllers/game.js")
+
+		include _ga.html
